<resources>
    <string name="app_name">Flat Duties</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="Nick">Nick</string>
    <string name="Next">Next</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="Logout">Logout</string>
    <string name="Settings">Settings</string>
    <string name="Group">Group</string>
    <string name="Password_min_length">Password must be at least 6 characters and contains min one digit</string>
    <string name="toast_user_registered">User registered</string>
    <string name="toast_connection_error">Connection Error</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="Old_password">Old Password</string>
    <string name="New_password">New password</string>
    <string name="Repeat_new_password">Repeat new password</string>
    <string name="Change_password">Change password</string>
    <string name="New_Email">New email</string>
    <string name="Change_email">Change email</string>
    <string name="New_Nick">New nick</string>
    <string name="Change_nick">Change nick</string>
    <string name="New_email_is_incorrect">New email is incorrect</string>
    <string name="email_changed">Email has been changed</string>
    <string name="nick_changed">Nickname has been changed</string>
    <string name="password_changed">Password have been changed</string>
    <string name="Group_name">Group name</string>
    <string name="Join_group">Join group</string>
    <string name="City">City</string>
    <string name="Street">Street</string>
    <string name="House_number">House nr</string>
    <string name="Flat_number">Flat nr</string>
    <string name="Create_and_join">Create and join new group</string>
    <string name="Create_group">Create new group</string>
    <string name="Optional_group_data">The rest of the information is optional, but it will allow other members to find the group more easily in the future</string>
    <string name="new_group_created">New group created</string>
    <string name="Repeat_password">Repeat password</string>
    <string name="Join_flatmates">Join flatmates!</string>
    <string name="header_first_group">Connect with flatmates!</string>
    <string name="Description_first_group">Join an existing group or create one for your apartment.</string>
    <string name="Join_group_more_info">If you don\'t remember group name, you can search it using following data (only if you provided this data then creating group)</string>
    <string name="Join_group_with_group_name">If you remember group name, and password you can easly join group only with these data</string>
    <string name="Email_title">Flat Duties: Password reset</string>
    <string name="Email_body">Hello, Because you have forgotten the password to our application, we have generated a new temporary password for your account. \nDon\'t forget to change it immediately after you log in successfully. \nYour temporary password is:    </string>
    <string name="slide_heading_1">Welcome!</string>
    <string name="slide_heading_2">Join group</string>
    <string name="slide_heading_3">Share duties</string>
    <string name="slide_heading_4">Make shopping lists</string>
    <string name="slide_description_1">We are happy that you have downloaded our app. You are only a few steps away from using it!</string>
    <string name="slide_description_2">Create a group and invite your roommates to join</string>
    <string name="slide_description_3">The application allows you to manage your household duties.</string>
    <string name="slide_description_4">Create and share shopping lists with your flat mates.</string>
    <string name="forget_password_toast">New password has been sent to:</string>
    <string name="cyclical_duties">Cyclical duties</string>
    <string name="New_duty">New duty</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="To_do_for">To do for:</string>
    <string name="Do_every">Do every:</string>
    <string name="manage_duties">Manage duties</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="New_shopping_item">New Item</string>
    <string name="Edit_duty">Edit duty</string>
    <string name="no_internet_connection">No Internet connection!</string>
</resources>
