<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/cyclical_duties">
        <menu>
            <item
                android:id="@+id/new_duty_drawer"
                android:icon="@drawable/ic_add_circle_outline"
                android:title="@string/New_duty" />

            <item
                android:id="@+id/manage_duties_drawer"
                android:icon="@drawable/ic_list"
                android:title="@string/manage_duties" />
        </menu>
    </item>



    <item android:title="@string/Group">
        <menu>
            <item
                android:id="@+id/join_group_drawer"
                android:icon="@drawable/ic_group"
                android:title="@string/Join_group" />
            <item
                android:id="@+id/create_new_group_drawer"
                android:icon="@drawable/ic_group_add"
                android:title="@string/Create_group" />
        </menu>
    </item>



    <item android:title="Communicate">
        <menu>

                <item
                    android:id="@+id/nav_settings_drawer"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/Settings" />

                <item
                    android:id="@+id/nav_logout_drawer"
                    android:icon="@drawable/ic_action_exit"
                    android:title="@string/Logout" />

        </menu>
    </item>







</menu>
