<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main.Settings"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/oldPassword_editText_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Old_password"
                android:textSize="20sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/newPassword_editText_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/New_password"
                android:textSize="20sp"
                android:autofillHints="@string/New_password"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password_min_length"
            android:paddingHorizontal="15dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/repeatNewPssword_editText_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Repeat_new_password"
                android:textSize="20sp"
                android:autofillHints="@string/Repeat_new_password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/changePassword_button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Change_password"
            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/newEmail_editText_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/New_Email"
                android:textSize="20sp"
                android:autofillHints="@string/New_Email"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/changeEmail_button_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Change_email"
            />



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/newNick_editText_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textCapWords"
                android:hint="@string/New_Nick"
                android:textSize="20sp"
                android:autofillHints="@string/New_Email"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/changeNick_button_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Change_nick"
            />


    </LinearLayout>

</ScrollView>