<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Login_activity">

    <Button
        android:id="@+id/sign_in_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_In"
        android:textSize="20sp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/sign_up_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_toEndOf="@+id/sign_in_button_start"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/next_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_below="@id/sign_in_button_start"
        />


</RelativeLayout>