<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewCyclicalDuty"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_editText_new_cyclical_duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
                android:textSize="20sp"
                android:lines="1"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_editText_new_cyclical_duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Description"
                android:textSize="20sp"
                android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
                android:lines="3"
                android:scrollbars="vertical"
                android:gravity="left"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/To_do_for"
            android:textSize="20sp"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scrollbars="vertical"
            android:id="@+id/to_do_for_recycler_cyclical_duty"
            />


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Do_every"
            android:textSize="20sp"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/do_every_recycler_cyclical_duty"
            />

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_cyclical_duty_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorPrimary"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancel_duty_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_action_cancel"
        app:backgroundTint="@color/colorAccent"
        />






</RelativeLayout>